--- a/src/page/index.less
+++ b/src/page/index.less
@@ -1,6 +1,6 @@
 
 .box{
-    width: 400px;
+    min-width: 400px;
     // height: 200px;
     background-color: #f0f0f0;
 }
@@ -14,4 +14,17 @@
     &:hover{
         background: #0099cccc;
     }
+}
+.line{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    align-items: center;
+    border-bottom: 1px solid #909090;
+    width: 600px;
+}
+.line-item{
+    display: inline-block;
+    flex:1;
+    overflow: hidden;
 }
