1.json地图（南极）切片异常 ；2.地球自转功能

--- a/src/page/index.less
+++ b/src/page/index.less
@@ -4,6 +4,27 @@
     background-color: #f0f0f0;
 }
 
+.box>img {
+    width: 100%;
+    display: inherit;
+}
+
+.box-inline {
+    height: 200px;
+    width: 800px;
+    position: absolute;
+    top: 0;
+    left: 400px;
+    background-color: red;
+    border: 1px solid red;
+}
+
+.box-inline>img {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+}
+
 .btn {
     display: inline-block;
     padding: 6px 10px;
