星空图优化版本

--- a/src/page/index.less
+++ b/src/page/index.less
@@ -5,23 +5,23 @@
 }
 
 .box>img {
+    margin-left: 400px;
     width: 100%;
     display: inherit;
 }
 
 .box-inline {
-    height: 200px;
-    width: 800px;
+    height: 400px;
+    width: 1600px;
     position: absolute;
-    top: 0;
-    left: 400px;
+    top: 0px;
+    left: 800px;
     background-color: red;
-    border: 1px solid red;
 }
 
 .box-inline>img {
-    width: 100px;
-    height: 100px;
+    width: 400px;
+    height: 400px;
     display: inline-block;
 }
 
