--- a/public/static/CesiumUnminified/Widgets/Timeline/Timeline.css
+++ b/public/static/CesiumUnminified/Widgets/Timeline/Timeline.css
@@ -38,15 +38,13 @@
   overflow: hidden;
   cursor: pointer;
   width: 100%;
-  height: 1.7em;
-  background: linear-gradient(
-    to bottom,
-    rgba(116, 117, 119, 0.8) 0%,
-    rgba(58, 68, 82, 0.8) 11%,
-    rgba(46, 50, 56, 0.8) 46%,
-    rgba(53, 53, 53, 0.8) 81%,
-    rgba(53, 53, 53, 0.8) 100%
-  );
+  height: 1s.7em;
+  background: linear-gradient(to bottom,
+      rgba(116, 117, 119, 0.8) 0%,
+      rgba(58, 68, 82, 0.8) 11%,
+      rgba(46, 50, 56, 0.8) 46%,
+      rgba(53, 53, 53, 0.8) 81%,
+      rgba(53, 53, 53, 0.8) 100%);
 }
 
 .cesium-timeline-ruler {
