--- a/src/code/index.css
+++ b/src/code/index.css
@@ -162,3 +162,12 @@
 .gismap-multiplier-select-item:hover {
     background-color: rgba(13, 252, 255, 0.26);
 }
+
+.gismap-location-bar {
+    position: absolute;
+    left: 0;
+    bottom: -42px;
+    width: 100%;
+    height: 42px;
+    background-color: #0dfcff33;
+}
